--- a/.github/workflows/golangci-lint.yml
+++ b/.github/workflows/golangci-lint.yml
@@ -17,6 +17,10 @@ jobs:
         with:
           go-version: 1.18
       - uses: actions/checkout@v3
+      - name: Install libraries
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y opencl-headers
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v3
         with:
