--- a/.github/workflows/golangci-lint.yml
+++ b/.github/workflows/golangci-lint.yml
@@ -21,6 +21,8 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y opencl-headers
+      - name: Run tests
+        run: go test -race ./...
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v3
         with:
