--- a/.github/workflows/golangci-lint.yml
+++ b/.github/workflows/golangci-lint.yml
@@ -21,7 +21,7 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt list -a opencl-headers
-          sudo apt-get install -y opencl-headers
+          sudo apt-get install -y opencl-headers ocl-icd-opencl-dev
       - name: Run tests
         run: go test -race ./...
       - name: golangci-lint
